# yy_cpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md  SubjectObserver.h  demo.cpp  subject_observer.h  yy_aho-corasick.h  yy_aho_corasick.h  yy_arg_traits.h  yy_array_traits.h  yy_assert.h  yy_atomic_traits.hpp  yy_atomic_wrapper.hpp  yy_binary_search.h  yy_bit_twiddling.h  yy_clear_action.h  yy_compare_util.h  yy_constants.hpp  yy_container_traits.h  yy_cppConfig.cmake  yy_default_value_type.hpp  yy_fast_atoi.h  yy_find_iter_types.hpp  yy_find_iter_util.h  yy_find_iter_util.hpp  yy_find_raw_types.hpp  yy_find_raw_util.hpp  yy_find_types.hpp  yy_find_util.h  yy_find_util.hpp  yy_flat_map.h  yy_flat_radix_trie.h  yy_flat_set.h  yy_flat_trie.h  yy_flat_trie_idx.h  yy_flat_trie_ptr.h  yy_fm_flat_trie.h  yy_fm_flat_trie_idx.h  yy_fm_flat_trie_ptr.h  (+65 more)
benchmarks/: CMakeLists.txt  bench_bit_twiddling.cpp  bench_bit_twiddling_64.cpp  bench_bit_twiddling_64.cpp.tmp  bench_bit_twiddling_8.cpp  bench_compare_util.cpp  bench_fast_atoi.cpp  bench_fast_atoi.hpp  bench_fast_atoi_atoll.cpp  bench_fast_atoi_idx.cpp  bench_fast_atoi_inc.cpp  bench_fast_atoi_strtoll.cpp  bench_flat_map.cpp  bench_flat_map_binary.cpp  bench_flat_map_double.cpp  bench_flat_map_linear.cpp  bench_flat_map_single.cpp  bench_flat_radix_trie.cpp  bench_flat_trie.cpp  bench_flat_trie_idx.cpp  bench_flat_trie_idx_word.cpp  bench_flat_trie_ptr.cpp  bench_flat_trie_ptr_word.cpp  bench_fm_flat_trie.cpp  bench_fm_flat_trie_idx.cpp  bench_fm_flat_trie_idx_word.cpp  bench_fm_flat_trie_ptr.cpp  bench_fm_flat_trie_ptr_word.cpp  bench_fm_radix_trie.cpp  bench_fm_trie.cpp  bench_map.cpp  bench_radix_trie.cpp  bench_string_copy.cpp  bench_string_find.cpp  bench_trie.cpp  bench_trie_lookup.cpp  bench_trie_lookup.h  bench_trie_n1.cpp  bench_trie_n2.cpp  bench_trie_n3.cpp  (+3 more)
examples/: CMakeLists.txt  aho_corasick.cpp  lockable_values.cpp  subject_observer.cpp
unit_tests/: CMakeLists.txt  binary_search_tests.cpp  bit_twiddling_tests.cpp  compare_util_tests.cpp  fast_atoi_tests.cpp  find_util_iter_tests.cpp  flat_map_tests.cpp  flat_radix_trie_tests.cpp  flat_set_tests.cpp  flat_trie_idx_tests.cpp  flat_trie_ptr_tests.cpp  flat_trie_tests.cpp  fm_flat_trie_idx_tests.cpp  fm_flat_trie_idx_word_tests.cpp  fm_flat_trie_ptr_tests.cpp  fm_flat_trie_ptr_word_tests.cpp  fm_flat_trie_tests.cpp  fm_radix_trie_tests.cpp  fm_trie_tests.cpp  lower_bound_tests.cpp  radix_trie_tests.cpp  ref_traits_tests.cpp  scan_str_tests.cpp  simple_vector_iter_tests.cpp  simple_vector_tests.cpp  span_iter_tests.cpp  span_tests.cpp  static_flat_map_tests.cpp  string_case_tests.cpp  string_util_tests.cpp  tokenizer_tests.cpp  trie_n1_tests.cpp  trie_n2_tests.cpp  trie_n3_tests.cpp  trie_tests.cpp  utf8_tests.cpp  variant_tests.cpp  vector_iter_tests.cpp  vector_tests.cpp  vector_util_tests.cpp
variants/: yy_fast_atoi_idx.h  yy_fast_atoi_inc.h
